# nexus

./: CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: rust.yml
docs/: INDEX.md  cookbook-latency-monitoring.md  onboarding.md
docs/design/: nexus-fix-codec.md  nexus-fix-engine.md  nexus-fix.md  nexus-shm.md
nexus-ascii/: CHANGELOG.md  Cargo.toml
nexus-ascii/src/: flat_string.rs  flat_text.rs  format.rs  lib.rs  parse.rs  text.rs
nexus-async-fix-engine/src/: lib.rs
nexus-async-fix-engine/tests/: async_conformance.rs
nexus-async-net/: BENCHMARKS.md  CHANGELOG.md  Cargo.toml  README.md
nexus-async-net/benches/: perf_async_ws_nexus.rs  perf_ws_cycles_nexus.rs  perf_ws_cycles_tokio.rs
nexus-async-net/src/: lib.rs  wire.rs
nexus-async-net/tests/: maybe_tls_nexus_backpressure.rs  tls_handshake_piggyback.rs  ws_nexus_integration.rs  ws_nexus_tls_loopback.rs
nexus-async-rt/: CHANGELOG.md  Cargo.toml  README.md
nexus-async-rt/benches/: channel.rs  executor.rs
nexus-async-rt/docs/: API_GUIDE.md  ARCHITECTURE.md  INDEX.md  cancellation.md  channels.md  integration-with-nexus-rt.md  patterns.md  task-spawning.md  tokio-compat.md
nexus-async-rt/src/: cancel.rs  context.rs  io.rs  lib.rs  runtime.rs  shutdown.rs  task.rs  world_ctx.rs
nexus-async-rt/tests/: cancel_alloc_count.rs  channel_fuzz.rs  miri_cancel.rs  net_tcp.rs  net_udp.rs  slab_shutdown_bug.rs  tokio_compat.rs  vs_tokio.rs
nexus-async-web/: Cargo.toml
nexus-async-web/benches/: perf_async_ws.rs  perf_async_ws_nexus.rs  perf_ws_cycles_nexus.rs  perf_ws_cycles_tokio.rs
nexus-bits/: CHANGELOG.md
nexus-bits-derive/: CHANGELOG.md
nexus-channel/: CHANGELOG.md  Cargo.toml
nexus-collections/: BENCHMARKS.md  CHANGELOG.md  Cargo.toml  README.md
nexus-decimal/: CHANGELOG.md  Cargo.toml
nexus-fix-codec/: BENCHMARKS.md  CHANGELOG.md  Cargo.toml  README.md
nexus-fix-codec/benches/: parse_types.rs  perf_parse_cycles.rs  scan.rs
nexus-fix-codec/examples/: _bench_utils.rs  perf_scan.rs
nexus-fix-codec/src/: convert.rs  dict.rs  error.rs  lib.rs  parser.rs  reader.rs  span.rs  types.rs  writer.rs
nexus-fix-codec/src/scan/: avx2.rs  avx512.rs  mod.rs  scalar.rs  sse2.rs
nexus-fix-codec/tests/: property.rs
nexus-fix-codegen/: Cargo.toml  README.md
nexus-fix-codegen-tests/: Cargo.toml
nexus-fix-codegen-tests/benches/: perf_decode_cycles.rs
nexus-fix-codegen-tests/tests/: roundtrip.rs
nexus-fix-codegen/src/: lib.rs  main.rs  tests.rs
nexus-fix-codegen/src/dict/: mod.rs  parse.rs
nexus-fix-codegen/src/emit/: admin.rs  encoders.rs  fields.rs  groups.rs  header.rs  messages.rs  mod.rs
nexus-fix-engine/: Cargo.toml
nexus-fix-engine/examples/: blocking_session.rs
nexus-fix-engine/src/: frame.rs  framework.rs  lib.rs  persist.rs  transport.rs
nexus-fix-engine/src/session/: event.rs  mod.rs
nexus-fix-engine/tests/: fix_conformance.rs  framework.rs  session.rs  transport.rs
nexus-fix-engine/tests/fixtures/: fix_peer.py
nexus-id/: BENCHMARKS.md  CHANGELOG.md
nexus-inference/: CHANGELOG.md  Cargo.toml  PERF_CATALOG.md  README.md
nexus-journal/: Cargo.toml
nexus-journal/src/rotating/: conductor.rs  mod.rs
nexus-logbuf/: BENCHMARKS.md  CHANGELOG.md  Cargo.toml
nexus-net/: CHANGELOG.md  Cargo.toml  README.md
nexus-notify/: CHANGELOG.md  Cargo.toml
nexus-platform/: CHANGELOG.md  Cargo.toml  README.md
nexus-platform/src/: file_lock.rs  lease.rs  lib.rs  mapped_file.rs  shared_memory.rs
nexus-platform/src/file_lock/: linux.rs
nexus-platform/src/lease/: linux.rs
nexus-platform/src/mapping/: linux.rs  mod.rs
nexus-pool/: BENCHMARKS.md  CHANGELOG.md  Cargo.toml  README.md
nexus-pool/docs/: caveats.md
nexus-pool/src/: lib.rs  local.rs  loom_impl.rs  sync.rs
nexus-pool/tests/: loom_sync.rs  miri_tests.rs
nexus-queue/: BENCHMARKS.md  CHANGELOG.md
nexus-rate/: BENCHMARKS.md  CHANGELOG.md
nexus-rt/: CHANGELOG.md  Cargo.toml  README.md
nexus-rt-derive/: CHANGELOG.md
nexus-shm/: CHANGELOG.md  Cargo.toml
nexus-shm/benches/: journal.rs  ofd_liveness.rs
nexus-shm/src/: control.rs  error.rs  lib.rs  pod.rs  region.rs  ring.rs  seglog.rs  segment.rs  slot.rs
nexus-shm/src/journal/: error.rs  mod.rs  reader.rs  tests.rs  writer.rs
nexus-shm/src/seglog/: conductor.rs  error.rs  frame.rs  manifest.rs  mod.rs  tests.rs
nexus-shm/src/seglog/platform/: linux.rs  mod.rs
nexus-shm/tests/: loom_ring.rs
nexus-slab/: CHANGELOG.md
nexus-slot/: CHANGELOG.md
nexus-smartptr/: CHANGELOG.md
nexus-stats/: CHANGELOG.md  Cargo.toml  README.md
nexus-stats-control/: CHANGELOG.md  Cargo.toml
nexus-stats-core/: CHANGELOG.md  Cargo.toml  README.md
nexus-stats-detection/: CHANGELOG.md  Cargo.toml  README.md
nexus-stats-regression/: CHANGELOG.md  Cargo.toml
nexus-stats-smoothing/: CHANGELOG.md  Cargo.toml
nexus-timer/: BENCHMARKS.md  CHANGELOG.md
nexus-web/: Cargo.toml
tools/: backfill-tags.sh  clippy.sh
(+287 files in other folders)
