[package]
name = "nexus-fix-codec"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Zero-copy FIX protocol read/write primitives with SIMD acceleration"
readme = "README.md"
repository.workspace = true
keywords = ["fix", "protocol", "zero-copy", "simd", "trading"]
categories = ["parsing", "network-programming"]

[lints]
workspace = true

[dependencies]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "scan"
harness = false
