[package]
name = "nexus-journal"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Append-only and bounded-rotation mmap'd journals for trading systems"
repository.workspace = true
keywords = ["journal", "append-log", "mmap", "low-latency", "trading"]
categories = ["data-structures", "os::unix-apis"]

[lints]
workspace = true

[dependencies]
nexus-platform = { version = "0.1.0", path = "../nexus-platform" }
nexus-queue = { version = "1.3.1", path = "../nexus-queue" }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
hdrhistogram.workspace = true

[[bench]]
name = "append"
harness = false
